# LumiCare

./: README.md
backend/: main.py  pyproject.toml
backend/src/: app.py
backend/src/database/: mongo.py
backend/src/models/: analysis.py  users.py
backend/src/routes/: camera_checks.py  skin_analysis.py  users.py
backend/src/services/: camera_analysis_service.py  skin_analysis_methods.py  skin_analyzer_main.py  skin_comprehensive_analyzer.py  skin_diet_service.py  skin_image_processor.py  skin_metrics_analyzer.py  skin_persistence.py  skin_routine_service.py
backend/src/utils/: bson.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/Dashboard/: Dashboard.css  Dashboard.jsx
frontend/src/Dashboard/components/Header/: Header.css  Header.jsx
frontend/src/Dashboard/components/ProfileSection/: ProfileSection.css  ProfileSection.jsx
frontend/src/Dashboard/components/ProgressTracker/: ProgressTracker.css  ProgressTracker.jsx
frontend/src/Dashboard/components/SkinAnalysis/: SkinAnalysis.css  SkinAnalysis.jsx
frontend/src/Dashboard/components/SkinRoutine/: SkinRoutine.css  SkinRoutine.jsx
frontend/src/auth/: AuthenticationPage.jsx  ClerkProviderWithRoutes.jsx  ProfileCompleteGuard.jsx
frontend/src/auth/components/SignIn/: CustomSignIn.jsx  SignIn.css  index.js
frontend/src/components/: DashboardNavigation.jsx
frontend/src/layout/: Layout.jsx
frontend/src/pages/: LandingPage.css  LandingPage.jsx  ProfilePage.jsx  ProgressPage.jsx  RoutinePage.jsx  SkinAnalysisPage.jsx
(+5 files in other folders)
