[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "clerk-backend-api>=3.0.5",
    "email-validator>=2.2.0",
    "fastapi>=0.116.0",
    "google-generativeai>=0.8.5",
    "mediapipe>=0.10.21",
    "motor>=3.7.1",
    "opencv-python>=4.11.0.86",
    "pymongo>=4.14.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
